--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,15 +1,33 @@
-* + * {
-    margin-top: 20px;
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500);
+
+body, html {
+  width: 100%;
+  height: 100%;
 }
 
-.republican {
-    background-color: rgba(255, 0, 0, .7);
+body {
+  font-family: Roboto;
+  font-weight: 300;
+  margin: 0;
 }
 
-.democrat {
-    background-color: rgba(0, 0, 255, .7);
+*, *:before, *:after {
+  box-sizing: border-box;
 }
 
-.dropped {
-    background-color: rgba(50, 50, 50, .7);
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 100;
+}
+
+ul {
+  font-size: 1.2rem;
+}
+
+li + li {
+  margin-top: .75rem;
+}
+
+em {
+  color: #cc0000;
+  font-style: normal;
 }
